fix(literallygoogle): align mobile header and fab side

--- a/themes/literallygoogle/style.css
+++ b/themes/literallygoogle/style.css
@@ -1258,6 +1258,7 @@ body {
     #results-header > button[aria-label="Apps"] {
         align-self: center;
         margin-block: 0;
+        transform: translateY(7px);
     }
 }
 
